Fix w and w8 overflow problem

--- a/app/assets/stylesheets/w.scss
+++ b/app/assets/stylesheets/w.scss
@@ -8,7 +8,6 @@ body.w {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden;    
 
   .page-section {
     float: right;
