--- a/app/assets/stylesheets/w8.scss
+++ b/app/assets/stylesheets/w8.scss
@@ -12,7 +12,6 @@ body.w8 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden;
 
   .page-section {
     $width: 500px;
